--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-Marcelinho
-Programador
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <p>This is an example of a simple HTML page with one paragraph.</p>
+    </body>
+</html>
